# database-library

./: .gitignore  README.md  pyproject.toml  requirements.txt
Invoices/: models.py
books/: models.py
budget/: importers.py  loader.py  models.py
budget/importers/: paypal.py
budget/sql/: balance.sql  transaction_history.sql  transactions.sql
bundles/: models.py
bundles/loaders/: backload.py
bundles/sql/: bundled_games.sql  bundled_total.sql  bundledgames.sql  new_transaction.sql  use_key.sql
cv/: mixins.py  models.py
forms/: models.py
games/: models.py
games/sql/: wishlisted_games.sql
inventory/: models.py
job_tracker/: models.py
key_panel/: Dockerfile  __main__.py  requirements.txt  rxconfig.py
key_panel/index/: index.py
key_panel_htmx/: Dockerfile  __main__.py  main.py  requirements.txt
meta/: models.py
movies/: models.py  plot.py
portfolio/: fetch_nbp.py  load.py  models.py  requirements.txt  schema.json
portfolio/loaders/: helpers.py  mail-scheme.json  mail.py  parse_xtb.py  parser.py  schema.py  utils.py
portfolio/sql/: assets.sql  by_month.sql  by_type.sql  deposit_by_asset.sql  deposit_history.sql  pnl.sql  pnl_by_rate.sql  running_balance_to_deposit.sql  summary.sql
recipes/: models.py
resume/: models.py
scripts/: normalize.py
scripts/accounting/: dea_transactions.sql  edit_fifo.py  make_fifo.py
scripts/journal/: plot.py  plot_sleep.py  tables.py
scripts/load_mails/: parse_mbox.py  test_parse_mbox.py
songs/: models.py
timeseries/: add_session.sql  general.py  models.py
utils/: db.py  env.py  mixins.py
(+6 files in other folders)
